--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "css/html5reset.css">
+    <link rel = "stylesheet" href = "css/style.css">
     <title>Home Page</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <a class = "stmc" href = "#main">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
+                <li class = "active"><a href = "index.html">Home</a></li>
                 <li><a href = "pets.html">Pets</a></li>
                 <li><a href = "recipes.html">Recipes</a></li>
                 <li><a href = "travel.html">Travel</a></li>
@@ -25,7 +27,8 @@
 
         </div>
 
-<div>Content content blah blah blah idk what to put here lol
+<div>
+    <p>Content content blah blah blah idk what to put here lol</p>
 
     <p>I might just go ahead and add some lorem ipsum for the hell of it, might as well.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -35,7 +38,7 @@
     <ol>
         <li>The highest number between one (1) and one million (1,000,000) that does not contain the letter 'n' is eighty-eight (88).</li>
         <li>A "jiffy" is an actual measurement of time, it's a hundreth of a second (1/100 seconds).</li>
-        <li>If you have 23 people in a room, there is a roughly 50% chance that two of them share a birthday.</li>
+        <li>If you have 23 people in a room, there is roughly a 50% chance that two of them share a birthday.</li>
         <li>If you properly shuffle a deck of cards, it's almost guaranteed that that particular deck has never been shuffled before.</li>
         <li>Much to the dismay of Han Solo, a "parsec" is a unit of distance, not a unit of time. This means this his famous boast about completing "the Kessel Run in 12 parsecs" means he basically took a shortcut, since it's 20 parsecs wide. This is an error on George Lucas' part, and oddly enough is not one of the numerous things he edited in Star Wars.</li>
         <li>To tie into the previous fact, Lucas is infamous for editing his own work, such as making charcaters different species, adding more side characters to scenes, or recontextualizing entrire clips for fun.</li>
