--- a/recipes.html
+++ b/recipes.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "css/html5reset.css">
+    <link rel = "stylesheet" href = "css/style.css">
     <title>Recipes</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <a class = "stmc" href = "#main">Skip to Main Content</a>
     <nav>
         <ul>
             <li><a href = "index.html">Home</a></li>
             <li><a href = "pets.html">Pets</a></li>
-            <li><a href = "recipes.html">Recipes</a></li>
+            <li class = "active"><a href = "recipes.html">Recipes</a></li>
             <li><a href = "travel.html">Travel</a></li>
         </ul>
     </nav>
@@ -44,10 +46,11 @@
                 <li>Serve with or without dipping sauce</li>
             </ol>
             <h3>Additional Images</h3>
-            <img src = "images/Zucchini_fritters_2.jpeg" width = "200" alt = "Grated zucchini">
-            <img src = "images/Zucchini_fritters_3.jpeg" width = "200" alt = "Ingredients for zucchini fritters combined">
-            <img src = "images/Zucchini_fritters_4.jpg" width = "200" alt = "Zucchini fritters in the pan cooking">
-            
+            <div class = "zucchini-photos">
+                <img src = "images/Zucchini_fritters_2.jpeg" width = "200" alt = "Grated zucchini">
+                <img src = "images/Zucchini_fritters_3.jpeg" width = "200" alt = "Ingredients for zucchini fritters combined">
+                <img src = "images/Zucchini_fritters_4.jpg" width = "200" alt = "Zucchini fritters in the pan cooking">
+            </div>
             <h2>Chicken Curry</h2>
             <p><strong>Origin: </strong>Japan</p>
             <p><strong>Source: </strong>Family Recipe</p>
@@ -77,10 +80,11 @@
                 <li>Scoop rice into bowls and serve curry on top.</li>
             </ol>
             <h3>Additional Images</h3>
-            <img src = "images/curry-sauce.jpeg" width = "200" alt = "Curry sauce">
-            <img src = "images/raw-chicken-breast.jpeg" width = "200" alt = "Raw chicken breast">
-            <img src = "images/rice.jpeg" width = "200" alt = "Rice">
-
+            <div class = "curry-photos">
+                <img src = "images/curry-sauce.jpeg" width = "200" alt = "Curry sauce">
+                <img src = "images/raw-chicken-breast.jpeg" width = "200" alt = "Raw chicken breast">
+                <img src = "images/rice.jpeg" width = "200" alt = "Rice">
+            </div>
             <h2>BLAT Sandwich</h2>
             <p><strong>Origin: </strong>American</p>
             <p><strong>Source: </strong>My recipe</p>
@@ -103,9 +107,11 @@
                 <li>Put the other slice of bread at the top</li>
             </ol>
             <h3>Additional Images</h3>
-            <img src = "images/ingredients.jpg" width = "200" alt = "Ingredients of a BLAT sandwich">
-            <img src = "images/blat_2.jpg" width = "200" alt = "A BLAT sandwich is placed on a dish">
-            <img src = "images/blat_3.jpg" width = "200" alt = "a BLAT sandwich is made with multigrain bread">
+            <div class = "blat-photos">
+                <img src = "images/ingredients.jpg" width = "200" alt = "Ingredients of a BLAT sandwich">
+                <img src = "images/blat_2.jpg" width = "200" alt = "A BLAT sandwich is placed on a dish">
+                <img src = "images/blat_3.jpg" width = "200" alt = "a BLAT sandwich is made with multigrain bread">
+            </div>
         </div>
 
             <!-- Jackie Wolf -->
