--- a/travel.html
+++ b/travel.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "css/html5reset.css">
+    <link rel = "stylesheet" href = "css/style.css">
     <title>Travel</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <a class = "stmc" href = "#main">Skip to Main Content</a>
     <nav>
         <ul>
             <li><a href = "index.html">Home</a></li>
             <li><a href = "pets.html">Pets</a></li>
             <li><a href = "recipes.html">Recipes</a></li>
-            <li><a href = "travel.html">Travel</a></li>
+            <li class = "active"><a href = "travel.html">Travel</a></li>
         </ul>
     </nav>
     
