--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,15 +19,12 @@
                 <li><a href = "travel.html">Travel</a></li>
             </ul>
         </nav>
-        <h1>Week Two discussion</h1>
-
     </header>
     <main id = "main">
         <div>
+            <h1>Week Two Discussion</h1>
             <p>Welcome to Hub 339, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
-
         </div>
-
 <div>
     <p>Content content blah blah blah idk what to put here lol</p>
 
