--- a/recipes.html
+++ b/recipes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,23 +10,24 @@
 </head>
 <body>
     <a class = "stmc" href = "#main">Skip to Main Content</a>
-    <nav>
-        <ul>
-            <li><a href = "index.html">Home</a></li>
-            <li><a href = "pets.html">Pets</a></li>
-            <li class = "active"><a href = "recipes.html">Recipes</a></li>
-            <li><a href = "travel.html">Travel</a></li>
-        </ul>
-    </nav>
-
+    <header>
+        <nav>
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "pets.html">Pets</a></li>
+                <li class = "active"><a href = "recipes.html">Recipes</a></li>
+                <li><a href = "travel.html">Travel</a></li>
+            </ul>
+        </nav>
+    </header>
     <main id = "main">
-        <h1>Recipes</h1>
         <div>
+            <h1>Recipes</h1>
             <h2>Zucchini Fritters</h2>
             <p><strong>Origin: </strong>Unknown</p>
             <p><strong>Source: </strong>niftyrecipe.com</p>
             <p><strong>Category: </strong>Side dish/Main dish</p>
-            <img src = "images/Zucchini_fritters_1.jpeg" width = "200" alt = "A plate of zucchini fritters served with arugala and a white dipping sauce">
+            <img src = "images/Zucchini_fritters_1.jpeg" width = "400" alt = "A plate of zucchini fritters served with arugala and a white dipping sauce" class = "center">
             <p>I found this recipe for zucchini fritters on a food blog when I was looking for quick and easy dishes to make during undergrad. It uses minimal ingredients and can be done in less than half an hour. They're delicious and filling and go great with dipping sauces.</p>
             <h3>Recipe Ingredients</h3>
             <ol>
@@ -55,7 +57,7 @@
             <p><strong>Origin: </strong>Japan</p>
             <p><strong>Source: </strong>Family Recipe</p>
             <p><strong>Category: </strong>Main dish</p>
-            <img src = "images/Japanese-Chicken-Curry.jpg" width = "200" alt = "An  image of curry">
+            <img src = "images/Japanese-Chicken-Curry.jpg" width = "400" alt = "An  image of curry" class = "center">
             <p>Unlike Indian or Thai curry, Japanese curry is more savory than spicy. It's an exemplary comfort food and one of the most-loved home-cooked dishes in</p>
             <h3>Recipe Ingredients</h3>
             <ol>
@@ -89,7 +91,7 @@
             <p><strong>Origin: </strong>American</p>
             <p><strong>Source: </strong>My recipe</p>
             <p><strong>Category: </strong>Main</p>
-            <img src = "images/blat_main.png" width = "200" alt = "A BLAT on a plate">
+            <img src = "images/blat_main.png" width = "400" alt = "A BLAT on a plate" class = "center">
             <p>A BLAT sandwich is a delicious twist on the classic BLT, featuring crispy bacon, fresh lettuce, ripe tomatoes, and creamy avocado, all sandwiched between slices of bread for a satisfying blend of flavors and textures.</p>
             <h3>Recipe Ingredients</h3>
             <ol>
