--- a/pets.html
+++ b/pets.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,26 +10,28 @@
 </head>
 <body>
     <a class = "stmc" href = "#main">Skip to Main Content</a>
-    <nav>
-        <ul>
-            <li><a href = "index.html">Home</a></li>
-            <li class = "active"><a href = "pets.html">Pets</a></li>
-            <li><a href = "recipes.html">Recipes</a></li>
-            <li><a href = "travel.html">Travel</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+             <li><a href = "index.html">Home</a></li>
+                <li class = "active"><a href = "pets.html">Pets</a></li>
+                <li><a href = "recipes.html">Recipes</a></li>
+                <li><a href = "travel.html">Travel</a></li>
+            </ul>
+        </nav>
+    </header>
     <main id = "main">
-        <h1>Pets</h1>
         <div>
+            <h1>Pets</h1>
             <h2>Bacon Q Dog</h2>
-            <img src="images/bacon.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
+            <img src="images/bacon.jpg" width = "400" alt="Brown labradoodle wearing colorful lei" class = "center">
             <p>Bacon Q. Dog is a 9yr old labradoodle. He prefers to spend his days lounging among the three different beds/couches that his family has gifted him. He enjoys a walk or two around the neighborhood, as long as he can pretend that he doesn't see any of the other animals to avoid the embarrassment of not wanting to admit he has no wolf-like skills in chasing them.</p> 
             <P>At night just as the rest of the family is ready to relax, Bacon suddenly wants to release all of his energy. He will place his toys on a mini couch and frantically drag the couch around, giving his toys "a ride." There is also a lot of rolling. Lots and lots of rolling.</P>
             <h3>Photo Gallery</h3>
             <div class = "bacon-photos">
                 <img src="images/bacon_bandana.JPG" width ="200" alt = "Brown labradoodle wearing an orange bandana">
                 <img src="images/bacon_graduation.JPG"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
-                <video width="200"  controls>
+                <video class = "vid" width="200"  controls>
                     <source src="images/bacon_agility.mov">
                     Your browser does not support the video tag.  This was a video of a girl and dog demonstrating a sit and stay procedure
                 </video>
@@ -42,7 +45,7 @@
             </ul>
             <span><br></span>
             <h2>Fitz</h2>
-            <img src="images/Fitz.jpeg" width = "400" alt="Boston terrier watching a tennis ball at the table">
+            <img src="images/Fitz.jpeg" width = "400" alt="Boston terrier watching a tennis ball at the table" class = "center">
             <p>Loves chasings tennis balls, chipmunks, squirrels, and birds. Often found sitting by the fire in wintertime, and in sun patches when available. He’s energetic, mischievous, and easily bored. He loves people and gets grumpy if left without a lap too long.</p> 
             <P>Loves barking up trees, running around on the lawn, and digging in the dirt looking for moles. He especially likes getting treats and whines when he comes inside and doesn’t get a snack.</P>
             <h3>Photo Gallery</h3>
@@ -60,7 +63,7 @@
             </ul>
             <span><br></span>
             <h2>Sage</h2>
-            <img src="images/sage_classic.jpeg" width = "400" alt="A smiling golden retriever lying on the bed">
+            <img src="images/sage_classic.jpeg" width = "400" alt="A smiling golden retriever lying on the bed" class = "center">
             <p>Sage is a 3 year old Golden Retriever. She is one of the laziest dogs. She loves sneaking into the bedroom and hopping onto the neatest bed. She also loves riding in a car with the windows open feeling the wind and air. She enjoys walking, only if you take her for a ride to a big arboretum or park. Walking around the neighborhood is not necessarily her cup of tea.</p> 
             <P>Her favorite food is corn. One day, she stole corn on the cob from the dining table, which was surprising because she is normally gentle and polite. She took the stolen corn to the patio and enjoyed her meal by herself. Unfortunately, the corn turned out to be unripe, so she ended up vomiting it all later.</P>
             <h3>Photo Gallery</h3>
@@ -96,7 +99,7 @@
         -->
             <span><br></span>
             <h2>Lulu</h2>
-            <img src="images/lulu-1.jpg" width = "400" alt="A chubby guinea pig with patches of dark-brow and white">
+            <img src="images/lulu-1.jpg" width = "400" alt="A chubby guinea pig with patches of dark-brow and white" class = "center">
             <p>Lulu is a lively guinea pig who enjoys eating carrots and peppers. When not given any carrots or peppers she will squeak.</p> 
             <P>Lulu is very adventurous, she will explore her surroundings looking for food and is not afraid.</P>
             <h3>Photo Gallery</h3>
@@ -114,7 +117,7 @@
             </ul>
             <span><br></span>
             <h2>Rocket</h2>
-            <img src="images/rocket_primary.jpg" width = "400" alt="Cute, small and yellow pomeranian">
+            <img src="images/rocket_primary.jpg" width = "400" alt="Cute, small and yellow pomeranian" class = "center">
             <p>Rocket (also named huihui) is a 6-month pomeranian puppy with big eyes and a small, black cute nose. Rocket is named rocket because he runs so fast and energetic all day without even having some rest. Rocket loves to carry his little toy walking around the house and jumping towards my bed.</p> 
             <P>Rocket is friendly to all human beings. He will be a little shy at first, but will ‘say hi’ to you after a few seconds. He is also friendly to dogs, especially the small breed, because the large size dogs are hard for him to smell lol. If you meet rocket, don’t hesitate to say hi to him!! He will be super happy the whole day.</P>
             <h3>Photo Gallery</h3>
@@ -122,7 +125,7 @@
                 <img src="images/rocket_dinner.jpg" width ="200" alt = "Rocket is eating his dinner">
                 <img src="images/rocket_wants_to_go_out.jpg"  width ="200" alt="Rocket wants to come out of the playpen">
                 <img src="images/rocket_childhood.jpg"  width ="200" alt="Rocket is in his childhood">
-                <video width="200"  controls>
+                <video class = "vid" width="200"  controls>
                     <source src="images/rocket_kitchen_clip.mp4">
                     Your browser does not support the video tag. This was a video of Rocket trying to hunt in the kitchen.
                 </video>
